--- a/css/style.css
+++ b/css/style.css
@@ -20,7 +20,8 @@ body {
   -ms-interpolation-mode: bicubic;
   image-rendering: -moz-crisp-edges;
   margin-top: 0px;
-  width: auto;
+  width: 100%;
+  overflow-x: hidden;
 
 }
 
@@ -38,10 +39,11 @@ html{
     background: linear-gradient(to bottom,  #a7d3db 0%,#cfddc9 78%,#e2e3ce 88%,#fceabd 100%); /* W3C */
 
     filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#a7d3db', endColorstr='#fceabd',GradientType=0 ); /* IE6-8 */
-    width:auto;
 
-    height : 3500px;
     background-repeat: no-repeat;
+    min-width: 100%;
+    height : 3500px;
+    overflow-x: hidden;
 }
 
 
